--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.14.3",
-    "@cloudinary/url-gen": "^1.22.0",
-    "@fortawesome/free-regular-svg-icons": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/react-fontawesome": "^3.1.0",
-    "@paypal/react-paypal-js": "^8.7.0",
-    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "axios": "^1.7.7",
+    "@paypal/react-paypal-js": "^8.7.0",
+    "@cloudinary/url-gen": "^1.22.0",
+    "@cloudinary/react": "^1.14.3",
+    "react-datepicker": "^7.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
